# C-Cpp_programming

CMake_project/Step1/MathFunctions/: MathFunctions.cxx
CMake_project/Step1/a_Step1/: CMakeLists.txt  README.md
CPP_language/CPP_projects/10.if_statements/: a.if.cpp
CPP_language/CPP_projects/11.switch/: a.switch.cpp  b.switch.cpp  c.switch.cpp  d.console_calcualtor_program.cpp
CPP_language/CPP_projects/12.Ternary_operators/: a.Ternary_operators.cpp  b.Ternary_operators.cpp
CPP_language/CPP_projects/9.math_functions/: c.Hypotenuse_calculator.cpp
CPP_language/OOP/1.Classes_and_Objects/: a.Classes_Objs.cpp
CPP_language/OOP/2.Access_modifiers/: a.access_modifiers.cpp
CPP_language/OOP/3.Constructors/: a.Constructors.cpp
CPP_language/OOP/4.Encapsulation/: a.Encapsulation.cpp
CPP_language/OOP/5.Abstration/: a.Abstation.cpp
CPP_language/OOP/6.Inheritance/: a.Inheritance.cpp  b.inheritance.cpp
C_language/17_pointer_vs_array/: b_pva.c
C_language/struct/: a_struct  a_struct.c  b_struct  b_struct.c  c_struct  c_struct.c
Pointers_in_C_CPP/: n_character_arrays_and_pointers.c  o_character_arrays_and_pointers.c
